[package]
name = "marsupial"
version = "0.1.0"
authors = ["Victor Springer <victorspringer@gmail.com>"]

[dependencies]
iron = "0.6.0"
iron-cors = "0.7.0"
router = "0.6.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.9"
persistent = "0.4.0"
bodyparser = "0.8.0"
bson = "0.10.0"
mongodb = "0.3.7"
rust-s3 = "0.9.0"